--- a/src/app/components/register/register/register.component.html
+++ b/src/app/components/register/register/register.component.html
@@ -150,7 +150,7 @@
       </div>
 
       <div class="form-group d-flex justify-content-center text-white" id="indietro">
-        <a class="nav-link me-2 pt-4" routerLink="/"><i class="bi bi-arrow-left-circle"></i></a>
+        <a class="nav-link me-2 pt-4 indietro" routerLink="/"><i class="bi bi-arrow-left-circle"></i> Indietro</a>
       </div>
 
       <div class="alert alert-danger mt-3" *ngIf="f.submitted && isSignUpFailed">
