--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -1,33 +1,34 @@
-.banner-image{
+.banner-image {
   background-image: url(../../../../assets/img/30anni.jpg);
   background-size: cover;
   background-position: center;
   height: 620px;
   padding-top: 100px;
-  margin-top: -80px!important;
+  margin-top: -80px !important;
 }
 
-h1{
+h1 {
   font-weight: 400;
 }
-.tuffo{
+
+.tuffo {
   letter-spacing: 3px;
   text-transform: uppercase;
   background-color: orangered;
   border-color: orangered;
 }
 
-.tuffo:hover{
+.tuffo:hover {
   background-color: rgb(196, 53, 1);
   border-color: rgb(196, 53, 1);
 }
 
-p{
-  line-height: 30px;
+p {
+  line-height: 35px;
 }
 
 
-.descr{
+.descr {
   background-image: url(../../../../assets/img/background-01_UN.jpg);
   background-size: cover;
   background-position: center;
@@ -35,8 +36,9 @@ p{
 
 }
 
-h3{
-  font-weight: 500!important;
+h3 {
+  font-weight: 500 !important;
+  padding-top: 10px;
 }
 
 
@@ -48,101 +50,105 @@ hr {
   opacity: 1;
 }
 
-.squalo{
+.squalo {
   background-image: url("../../../../assets/img/background-squalo.jpg");
   background-size: cover;
   background-position: center;
-   width: 100%;
-   overflow-x: hidden;
-   background-position-y: 25%;
-   margin-top: -1px;
+  width: 100%;
+  overflow-x: hidden;
+  margin-top: -1px;
+  min-height: 800px;
+}
+
+.squalo p{
+  text-align: justify;
+}
+
+.descriptionsqualo {
+  padding-top: 90px;
+  margin-top: 0;
 }
 
 
-.pinguino{
-  background-image: url("../../../../assets/img/ghiacci.jpg");
+.pinguino {
+  background-image: url("../../../../assets/img/ghiacci1.jpg");
   background-size: cover;
   background-position: center;
   width: 100%;
   min-height: 400px;
   overflow-x: hidden;
-  background-position-y: 10%;
   margin-top: -1px;
+  min-height: 600px;
+  //------------------------
+  //---------------------
+  //FARE MEDIA A 1200 CON MIN HEIGHT 600 PX E ALLINEAMENTO TESTO
 }
 
-.medusa{
+.pinguino p{
+  text-align: justify;
+}
+
+.medusa {
   background-image: url("../../../../assets/img/background-04.jpg");
   background-size: cover;
   background-position: center;
   width: 100%;
   min-height: 400px;
   overflow-x: hidden;
-  background-position-y: 10%;
   margin-top: -1px;
+  min-height: 600px;
 }
 
-
-.story{
-  background-color: #00030A;
-   margin-top: -1px;
+.medusa p{
+  text-align: justify;
 }
 
-.carousel-item img {
-  height: 450px;
-  object-fit: cover;
-
-}
-
-.carousel-item h5 {
-  color: orangered;
-}
-
-.carousel-caption{
-  background-color: rgba(0, 0, 0, 0.534);
+.biosfera {
+  background-image: url("../../../../assets/img/biosfera_d_1.jpg");
+  background-size: cover;
+  background-position: center;
   width: 100%;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 0;
-  backdrop-filter: blur(15px);
+  min-height: 400px;
+  overflow-x: hidden;
+  margin-top: -1px;
+  min-height: 600px;
+}
+
+.biosfera p{
+  text-align: justify;
+}
+
+.ibis {
+  background-image: url("../../../../assets/img/ibis.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 400px;
+  overflow-x: hidden;
+  margin-top: -1px;
+  min-height: 600px;
+}
+
+.ibis p{
+  text-align: justify;
+}
+
+.visit {
+
+  background-image: url("../../../../assets/img/background-06.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  margin-bottom: -2px;
+
+}
+
+
+.visit h3{
+  padding-top: 2.5em!important;
+  line-height: 45px;
 }
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*----------------------------------------------------*/
-@media screen and (max-width: 575px){
-  .banner-image{
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .banner-image p{
-    font-size: 18px;
-  }
-}
-
-@media screen and (min-width: 992px){
-  .banner-image{
- padding-top: 30px;
-  }
-}
-
-@media screen and (min-width: 1200px){
-  .banner-image{
- padding-top: 110px!important;
-  }
-}
