--- a/src/app/components/login/login/login.component.scss
+++ b/src/app/components/login/login/login.component.scss
@@ -65,7 +65,7 @@ color: orangered!important;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('../../../../assets/img/sfondo2.jpg')no-repeat;
+  background: url('../../../../assets/img/abisso.jpg')no-repeat;
   background-position: center;
   background-size: cover;
 
@@ -135,7 +135,10 @@ padding: 5px ;
 }
 
 .bi{
-  font-size: 32px;
+  font-size: 28px;
+  vertical-align: middle;
+  padding-right: 7px;
+
 }
 
 .bi:hover{
@@ -143,3 +146,12 @@ padding: 5px ;
   transition: 0.2s;
 }
 
+.indietro {
+  display: flex;
+  align-items: center;
+}
+
+.indietro:hover{
+  color: orangered;
+  transition: 0.2s;
+}
