--- a/src/app/components/register/register/register.component.scss
+++ b/src/app/components/register/register/register.component.scss
@@ -58,7 +58,7 @@ color: orangered!important;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('../../../../assets/img/sfondo2.jpg')no-repeat;
+  background: url('../../../../assets/img/abisso.jpg')no-repeat;
   background-position: center;
   background-size: cover;
 
@@ -128,13 +128,25 @@ padding: 5px ;
 }
 
 .bi{
-  font-size: 32px;
+  font-size: 28px;
+  vertical-align: middle;
+  padding-right: 7px;
 }
 
 .bi:hover{
   color: orangered;
   transition: 0.2s;
 
+}
+
+.indietro {
+  display: flex;
+  align-items: center;
+}
+
+.indietro:hover{
+  color: orangered;
+  transition: 0.2s;
 }
 
 #recaptcha{
