--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -37,7 +37,7 @@
             <p class="pt-3">
               Costa Edutainment S.p.A. Acquario di Genova | Area Porto Antico - Ponte Spinola - 16128 - Genova
               <br>
-              Tel. 010/23451 - Fax 010/256160 - PIVA e CF : 03362540100
+              <a href="tel:+3901023451">Tel. 010/23451</a> - Fax 010/256160 - PIVA e CF : 03362540100
             </p>
           </div>
         </div>
