virtual tour update

--- a/src/app/components/contatti/contatti.component.html
+++ b/src/app/components/contatti/contatti.component.html
@@ -3,14 +3,23 @@
 <div class=" text-center bg-dark hero pb-5">
   <h1 class="display-4 mb-5 py-3 text-white">Contatti</h1>
 
-  <div id="contact" class="container contact-area section-padding ">
-    <div class="container pt-1 pb-5">
+  <div id="contact" class="container contact-area py-5 mb-5">
+    <div class="container ">
       <div class="section-title text-center">
-
       </div>
       <div class="row">
+        <div class="col-md-6 text-start text-white">
+          <div class="container ">
+            <div class="card">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11400.472620402663!2d8.9266709!3d44.4102211!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d343e101e57227%3A0x57b7c3ba05fd1126!2sAcquario%20di%20Genova!5e0!3m2!1sit!2sit!4v1680187725875!5m2!1sit!2sit"
+                height="465" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+        </div><!--- END COL -->
 
-        <div class="col-md-5 text-white">
+        <div class="col-md-6 text-white">
           <div class="single_address">
             <i class="fa fa-map-marker"></i>
             <h4>Indirizzo</h4>
@@ -24,42 +33,19 @@
           <div class="single_address">
             <i class="fa fa-phone"></i>
             <h4>Telefono</h4>
-            <a href="tel:+3901023451">010/23451</a>
+            <a href="tel:+3901023451">010-23451</a>
           </div>
           <div class="single_address">
-            <i class="fa fa-clock-o"></i>
+            <i class="fa-solid fa-clock"></i>
             <h4>Orario</h4>
             <p>Lunedi - Domenica <br> 09.00 - 18.00</p>
           </div>
         </div><!--- END COL -->
-        <div class="col-md-7 text-start text-white">
-          <div class="contact">
-            <form action="#" class="contact-form">
 
-              <div>
-                <label for="exampleFormControlInput1" class="form-label fw-bold">Nome</label>
-                <input type="text" class="form-control rounded border-white mb-3 form-input" id="name"
-                  placeholder="Nome" required>
-              </div>
-              <div>
-                <label for="exampleFormControlInput1" class="form-label fw-bold">Indirizzo email</label>
-                <input type="email" class="form-control rounded border-white mb-3 form-input" placeholder="Email"
-                  required>
-              </div>
-              <div>
-                <label for="exampleFormControlInput1" class="form-label fw-bold">Messaggio</label>
-                <textarea id="message" class="form-control rounded border-white mb-3 form-text-area" rows="5" cols="30"
-                  placeholder="Scrivi il tuo messaggio" required></textarea>
-              </div>
-              <button class="btn btn-primary btn-block mt-3 rounded-pill px-5 fw-bold mx-auto" routerLink="/tour">
-               Invia
-              </button>
-            </form>
-          </div>
-        </div><!--- END COL -->
       </div><!--- END ROW -->
     </div><!--- END CONTAINER -->
   </div>
+
 </div>
 
 
