--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -34,7 +34,7 @@
             <a class="navbar-brand" href="/">
               <img src="assets/img/logo-acquario-di-genova-negative.png" alt="logo" >
             </a>
-            <p class="pt-3">
+            <p class="pt-3 info">
               Costa Edutainment S.p.A. Acquario di Genova | Area Porto Antico - Ponte Spinola - 16128 - Genova
               <br>
               <a href="tel:+3901023451">Tel. 010/23451</a> - Fax 010/256160 - PIVA e CF : 03362540100
@@ -42,7 +42,7 @@
           </div>
         </div>
       </section>
-      <section class="text-center pb-4">
+      <section class="text-center pb-5">
         <a href="https://it-it.facebook.com/acquariodigenova/" target="_blank" class="text-white me-4">
           <i class="fa-brands fa-facebook fa-2x"></i>
         </a>
