--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -23,17 +23,15 @@
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">La baia degli squali</h5>
           <p class="card-text text-white">La baia degli squali, la grande vasca dedicata ai predatori del mare, che ospita, oltre a diverse specie di squalo provenienti da vari ambienti marini, altri pesci interessanti.</p>
-
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/neon-tropical-monstera-leaf-banner_53876-138943.jpg?w=1060&t=st=1680128006~exp=1680128606~hmac=acea8e3999288e980af882488101b38301d1edb5aa7f5ef720e052505c8000e9" class="card-img-top" alt="...">
+        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Virtual tour</a>
+          <h5 class="card-title text-white fw-bold ">Barriera corralina</h5>
+          <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
         </div>
       </div>
     </div>
