--- a/src/app/components/tour/tour.component.scss
+++ b/src/app/components/tour/tour.component.scss
@@ -25,9 +25,9 @@ h1 {
 
 
 iframe{
-  max-height: 250px!important;
-  //border-top-left-radius: 20px;
-  //border-top-right-radius: 20px;
+  max-height: 300px!important;
+  border-top-left-radius:15px;
+  border-top-right-radius: 15px;
   border: none!important;
 
 }
