--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
+        <iframe width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;" allow="xr-spatial-tracking; vr; gyroscope; accelerometer; fullscreen; autoplay; xr" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" allowvr="yes" ></iframe>
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">Barriera corralina</h5>
           <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
@@ -60,11 +60,6 @@
   </div>
 
 </div>
-
-
-
-
-
 
 
 <app-footer></app-footer>
